# SBC

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md
description/: Database structure.md  Installation.md  Список функций.md  Установка.md  Экономическая часть.md
draw/: sbc-interaction.drawio  sbc-server.drawio  Взаимодействие (прототип).drawio  Взаимодействие.drawio  Интерфейсы.drawio  Прототип клиента 1.drawio  Прототип клиента 2.drawio  Прототип клиента 3.drawio  Сервер веб телефон.drawio  Структура Protobuf.drawio
examples/: blowfish.cpp
new-web/include/: fg_membersite.php  membersite_config.php
old/: CMakeLists.txt
old/examples/: chat_client.cpp  chat_message.hpp
old/sql/: sql
old/src/core/: digits.cpp  digits.h  sbc_client.cpp  settings.h  user.cpp
old/src/db/: db_mysql.h  db_wrapper.h
old/src/net/: server.cpp  session.h
old/src/proto/: user_message.proto
src/core/: blowfish.cpp  blowfish.h  sbc.cpp  sbc_client.cpp  sbc_server.cpp  settings.cpp  settings.h  sha.cpp  sha.h  user.cpp  user.h  user_handler.cpp  user_handler.h  user_role.cpp  user_role.h  user_status.cpp  user_status.h  uuid.cpp  uuid.h
src/db/: db.cpp  db.h  db_mariadb.cpp  db_mariadb.h  db_mysql.cpp  db_mysql.h  db_mysql_old.cpp  db_mysql_old.h  db_pool.cpp  db_pool.h  db_sqlite.cpp  db_sqlite.h  db_sqlite_old.h  db_wrapper.cpp  table_codes.cpp  table_codes.h  table_template.cpp  table_template.h  table_template_impl.h  table_users.cpp  table_users.h
src/db/sqlite/: sqlite_encoding.cpp  sqlite_encoding.h  sqlite_journal_mode.cpp  sqlite_journal_mode.h  sqlite_synchronous.cpp  sqlite_synchronous.h
src/dev/: dev.cpp  dev.h
src/io/: logger.cpp  logger.h
src/net/: client.cpp  client.h  server.cpp  server.h  session.cpp  session.h
src/platform/: platform.cpp  platform.h
src/proto/: data.proto
src/test/: sbc_db_test.cpp  sbc_db_test.h
src/time/: current_time.cpp  current_time.h  execution_time.cpp  execution_time.h  wait_time.cpp  wait_time.h
src/web/: cookie.cpp  cookie.h  cookie_repository.cpp  cookie_repository.h  method.cpp  method.h  mime.cpp  mime.h  page.cpp  page.h  page_deprecated.cpp  page_old.cpp  post.cpp  post.h  request_handler.cpp  request_handler.h  url.cpp  url.h  web.cpp  web.h
src/web/pages/: about.cpp  about.h  dashboard.cpp  dashboard.h  index.cpp  index.h  install.cpp  install.h  login.cpp  login.h  logout.cpp  logout.h  not_found.cpp  not_found.h  p_index.cpp  p_index.h  page_template.cpp  page_template.h  registration.cpp  registration.h  terms.cpp  terms.h  test_page.cpp  test_page.h
tests/: blowfish_test.cpp  blowfish_test.h  sbc_tests.cpp  sbc_tests.h  settings_test.cpp  settings_test.h  sha_test.cpp  sha_test.h  uuid_test.cpp  uuid_test.h
web/: about.html  already_registered.html  checkout.html  dashboard.html  header.php  index.html  index.php  install.html  login.html  login.php  logout.html  logout.php  not_found.html  registration.html  signup.php  terms.html  test.html
web/about/: about.html
web/admin/: db.php
web/checkout/: index.html
web/dashboard/: index.html
web/not found/: not_found.html
web/sign-in/: index.html
